--- a/Bender.yml
+++ b/Bender.yml
@@ -28,6 +28,8 @@ sources:
   - src/cf_math_pkg.sv
   - src/clk_div.sv
   - src/delta_counter.sv
+  - src/dmr_stream_fork.sv
+  - src/dmr_stream_join.sv
   - src/ecc_pkg.sv
   - src/edge_propagator_tx.sv
   - src/exp_backoff.sv
@@ -95,6 +97,8 @@ sources:
       - test/cb_filter_tb.sv
       - test/cdc_2phase_tb.sv
       - test/cdc_fifo_tb.sv
+      - test/dmr_stream_fork_tb.sv
+      - test/dmr_stream_join_tb.sv
       - test/fifo_tb.sv
       - test/graycode_tb.sv
       - test/id_queue_tb.sv
